[package]
name = "OlaChain"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.7.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
serde_json = "1.0.140"
dotenv = "0.15.0"
