[package]
name = "OlaChain"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
serde_json = "1.0.140"
dotenv = "0.15.0"
sha3 = "0.11.0-rc.0"
secp256k1 = { version = "0.31.1", features = ["rand"] }
rand = "0.9.1"
